--- a/styling.css
+++ b/styling.css
@@ -2,3 +2,13 @@ body{
   justify-content: center;
   align-items: center;  
 }
+
+h1{
+    justify-content: center;
+    align-items: center; 
+}
+
+.main{
+    justify-content: center;
+    align-items: center; 
+}
