--- a/styling.css
+++ b/styling.css
@@ -1,14 +1,24 @@
 body{
   justify-content: center;
   align-items: center;  
+  padding: 40px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 h1{
     justify-content: center;
     align-items: center; 
+    display: flex;
+    font-weight: 400;
+}
+
+.button{
+    width: 60px;
+    font-weight: 200;
 }
 
 .main{
     justify-content: center;
     align-items: center; 
+    display: flex;
 }
