--- a/styling.css
+++ b/styling.css
@@ -1,8 +1,11 @@
 .body{
+    max-width: 500px;
+    margin: auto;
     justify-content: center;
     align-items: center;  
     padding: 40px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
 h1{
