--- a/styling.css
+++ b/styling.css
@@ -30,7 +30,7 @@ h1{
 
 #main {
     padding-bottom: 300px;
-    margin:0 auto;
+    margin: auto;
     position: relative;
     width: 960px;
     } 
