--- a/styling.css
+++ b/styling.css
@@ -5,7 +5,7 @@
     align-items: center;  
     padding: 40px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+    font-size:larger
 }
 
 h1{
